--- a/src/components/ClaimButton/ClaimButton.css
+++ b/src/components/ClaimButton/ClaimButton.css
@@ -1,5 +1,15 @@
+/*.claim-button {*/
+/*    margin: 10px;*/
+/*    padding: 10px;*/
+/*    width: 300px;*/
+/*}*/
+
 .claim-button {
-    margin: 10px;
-    padding: 10px;
+    padding: 10px 15px;
+    background: var(--tg-theme-button-color);
+    color: var(--tg-theme-button-text-color);
+    border: none;
+    outline: none;
+    cursor: pointer;
     width: 300px;
 }
