feature: try to get uid

--- a/src/components/ClaimButton/ClaimButton.css
+++ b/src/components/ClaimButton/ClaimButton.css
@@ -1,28 +1,15 @@
-/*.claim-button {*/
-/*    margin: 10px;*/
-/*    padding: 10px;*/
-/*    width: 300px;*/
-/*}*/
 
 .claim-button {
     padding: 10px 15px;
-    background: var(--tg-theme-button-color);
-    color: var(--tg-theme-button-text-color);
+    background: orange;
+    color: whitesmoke;
     border: none;
     outline: none;
     cursor: pointer;
     width: 300px;
 }
-.claim-button:hover {
-    background: darken(var(--tg-theme-button-color), 10%); /* Уменьшаем яркость фона на 10% при наведении */
-}
 
 .claim-button:active {
-    background: darken(var(--tg-theme-button-color), 20%); /* Уменьшаем яркость фона на 20% при нажатии */
     transform: scale(0.98); /* Уменьшаем размер кнопки на 2% для эффекта нажатия */
-}
-
-.claim-button:focus {
-    outline: 2px solid lighten(var(--tg-theme-button-color), 30%); /* Добавляем светлую границу при фокусе */
-    outline-offset: 2px;
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
 }
