--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,24 @@
-.image-container {
+.header-container {
+    display: flex;
+    justify-content: flex-end;
+    margin: 10px;
+    width: 100%;
+}
+
+.title-image {
+    height: 10vh;
+    width: auto;
+}
+
+.ton-connect-button {
+    background: none;
+    border: none;
+    cursor: pointer;
     padding: 10px;
+}
+
+.ton-connect-icon {
+    display: block;
+    width: 8vw;
+    height: auto;
 }
