--- a/src/components/MainComponent/MainComponent.css
+++ b/src/components/MainComponent/MainComponent.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     min-height: 10vh;
-    background-color: #f0f0f0;
+    /*background-color: #f0f0f0;*/
     padding: 20px;
 }
 
