--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
 
 .App {
   align-items: center;
-  --bg-image: url('./img/background-img.jpg');
-  --bg-image-opacity: 0.5;
+  background-color: antiquewhite;
+  color: mediumpurple;
+  /*--bg-image: url('./img/background-img.jpg');*/
+  /*--bg-image-opacity: 0.35;*/
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -16,13 +18,13 @@
   isolation: isolate;
 }
 
-.App::after {
-  background-image: var(--bg-image);
-  background-size: cover;
-  background-position: center;
-  content: '';
-  inset: 0;
-  opacity: var(--bg-image-opacity);
-  position: absolute;
-  z-index: -1;
-}
+/*.App::after {*/
+/*  background-image: var(--bg-image);*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  content: '';*/
+/*  inset: 0;*/
+/*  opacity: var(--bg-image-opacity);*/
+/*  position: absolute;*/
+/*  z-index: -1;*/
+/*}*/
