--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,24 +1,34 @@
 .header-container {
+    /*background-color: lightgreen;*/
+    align-content: center;
+    color: #0098EA;
     display: flex;
-    justify-content: flex-end;
-    margin: 10px;
+    justify-content: space-between;
+    font-size: 38px;
+    font-weight: bold;
+    margin-top: 30px;
     width: 100%;
 }
-
-.title-image {
-    height: 10vh;
-    width: auto;
+.header-container span {
+    align-content: center;
+    font-family: "Permanent Marker", cursive;
+    /*font-family: Arial;*/
+    font-weight: 400;
+    font-style: normal;
+    padding: 10px;
+    padding-left: 10px;
 }
 
 .ton-connect-button {
+    align-content: center;
     background: none;
     border: none;
     cursor: pointer;
     padding: 10px;
+    padding-right: 15px;
 }
 
 .ton-connect-icon {
-    display: block;
-    width: 8vw;
+    width: 9vw;
     height: auto;
 }
