--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -2,14 +2,15 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    height: 50vh;
-    overflow-y: auto;
+    /*height: 50vh;*/
+    /*overflow-y: auto;*/
 }
 
 .task-item {
     display: flex;
     align-items: center;
     padding: 10px;
+    margin: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
