--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,7 @@
   gap: 20px;
   height: 100vh;
   position: relative;
-  isolation: isolate;
-  overflow: hidden;
+  /*isolation: isolate;*/
 }
 
 /*.App::after {*/
