--- a/src/components/FooterMenu/FooterMenu.css
+++ b/src/components/FooterMenu/FooterMenu.css
@@ -5,7 +5,7 @@
     display: flex;
     gap: 10px;
     justify-content: space-between;
-    margin: 10px;
+    margin-top: 10px;
     text-decoration: none;
     width: 90%;
 }
