--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
-  height: 100vh;
+  max-height: 100vh;
   position: relative;
   /*isolation: isolate;*/
 }
