--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 20px;
+  /*gap: 20px;*/
   min-height: 100vh;
   position: relative;
   /*isolation: isolate;*/
