feature: new ui

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   /*position: absolute;*/
   position: relative;
   /*isolation: isolate;*/
-  overflow: hidden;
+  overflow: clip;
 }
 
 /*.App::after {*/
