--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   flex-direction: column;
   justify-content: space-between;
   /*gap: 20px;*/
-  height: 100%;
+  height: 100vh;
   /*position: absolute;*/
   /*position: relative;*/
   /*isolation: isolate;*/
