--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -4,14 +4,14 @@
     flex-direction: column;
     gap: 10px;
     /*height: 50vh;*/
-    /*overflow-y: auto;*/
+    overflow-y: auto;
 }
 
 .task-item {
     display: flex;
     align-items: center;
     padding: 10px;
-    margin: 10px;
+    margin: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
