--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     gap: 10px;
     /*height: 50vh;*/
-    overflow-y: visible;
+    overflow-y: scroll;
 }
 
 .task-item {
