--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    overflow: visible;
     /*height: 50vh;*/
-    overflow-y: scroll;
 }
 
 .task-item {
