--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   justify-content: space-between;
   /*gap: 20px;*/
   height: 100vh;
+  overflow: hidden;
   /*position: absolute;*/
   /*position: relative;*/
   /*isolation: isolate;*/
