--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,8 @@
     justify-content: space-between;
     font-size: 38px;
     font-weight: bold;
-    margin-top: 15px;
+    padding-top: 15px;
+    /*margin-top: 15px;*/
     width: 100%;
 }
 .header-container span {
