feature: new ui

--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -5,8 +5,9 @@
     background: antiquewhite;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     /*height: 50vh;*/
+    overflow: auto;
 }
 
 .task-item {
