--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background: antiquewhite;
   margin: 0;
   padding: 0;
-  overflow: clip;
+  /*overflow: clip;*/
 }
 
 .App {
@@ -15,7 +15,7 @@
   flex-direction: column;
   justify-content: space-between;
   /*gap: 20px;*/
-  height: 90vh;
+  /*height: 90vh;*/
   /*position: absolute;*/
   /*position: relative;*/
   /*isolation: isolate;*/
