--- a/src/components/FooterMenu/FooterMenu.css
+++ b/src/components/FooterMenu/FooterMenu.css
@@ -6,10 +6,10 @@
     gap: 10px;
     justify-content: space-between;
     margin-top: 10px;
-    overflow: clip;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    /*overflow: clip;*/
+    /*position: fixed;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
     text-decoration: none;
     width: 100%;
 }
