feature: new ui

--- a/src/components/FooterMenu/FooterMenu.css
+++ b/src/components/FooterMenu/FooterMenu.css
@@ -2,7 +2,8 @@
     align-content: center;
     background: antiquewhite;
     color: #0098EA;
-    display: flex;
+    /*display: flex;*/
+    display: none;
     gap: 10px;
     justify-content: space-between;
     margin-top: 10px;
