feature: new ui

--- a/src/components/FooterMenu/FooterMenu.css
+++ b/src/components/FooterMenu/FooterMenu.css
@@ -7,9 +7,9 @@
     justify-content: space-between;
     margin-top: 10px;
     /*overflow: clip;*/
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    /*position: fixed;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
     text-decoration: none;
     width: 100%;
 }
