--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    min-height: 40vh;
+    height: 40vh;
     overflow: scroll;
 }
 
