--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    height: 50vh;
+    height: 70vh;
     overflow: scroll;
 }
 
@@ -22,6 +22,10 @@
     height: 50px;
     border-radius: 25px;
     margin-right: 15px;
+}
+
+.task-details {
+    background-color: #f9f9f9;
 }
 
 .task-details h3 {
