--- a/src/components/Tasks/Tasks.css
+++ b/src/components/Tasks/Tasks.css
@@ -1,5 +1,5 @@
 .tasks-list {
-    background: antiquewhite;
+    background-color: antiquewhite;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -35,7 +35,7 @@
 }
 
 .task-details p {
-    margin: 5px 0;
+    padding: 5px 0;
     background-color: #f9f9f9;
 }
 
